--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 [dependencies]
 csv = "1.4"
 reqwest = { version = "0.12", features = ["blocking"] }
+scraper = "0.25.0"
 serde_json = "1.0.145"
